# bcdb

./: .gitignore  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  api.proto  build.rs
.github/workflows/: build.yml
benchmark_scripts/: simple_server.py
clients/: Makefile
clients/go/: example.go  go.mod  go.sum
clients/go/bcdb/: auth.go  bcdb.go  bcdb.pb.go  example_test.go  go.mod  go.sum
clients/go/bcdb/bcdb_proto/: bcdb.pb.go
clients/js/: envoy.yaml  readme.md
clients/js/bcdb/: bcdb_grpc_web_pb.js  bcdb_pb.js  example.js  index.html  package-lock.json  package.json
clients/python/: example.py
clients/python/bcdb/: README.md  __init__.py  auth.py  bcdb_pb2.py  bcdb_pb2_grpc.py  client.py  example.py  requirements.txt
docs/: README.md  api.md
examples/bcfiles/: .gitignore  README.md  go.mod  go.sum  main.go  utils.go
libzdb/: README.md  wrapper.h
proto/: bcdb.proto
specs/: 31_03_2020.md  acl.md  blockchain_behavior.md  kristof_remarks.md  p2p.md
src/: auth.rs  database.rs  explorer.rs  identity.rs  main.rs  meta.rs  rest.rs  server.rs  storage.rs
src/acl/: mod.rs
src/api/: api.rs  api_grpc.rs
src/bcdb/: local.rs  mod.rs  peers.rs
src/database/: data.rs  index.rs  sqlite.rs
src/identity/: ed25519.rs
src/meta/: sqlite.rs
src/peer/: mod.rs  router.rs
src/rest/: acl.rs  bcdb.rs
src/rpc/: mod.rs
src/sonic/: mod.rs  protocol.rs
src/storage/: encrypted.rs  memory.rs  zdb.rs
src/storage/zdb/: bindings.rs  embedded.rs  external.rs
