[package]
name = "dbreboot"
version = "0.1.0"
authors = ["The ThreefoldTech developers <info@threefold.tech>"]
edition = "2018"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
failure = "0.1.7"
redis = "0.15"
r2d2 = "0.8"
scheduled-thread-pool = "0.2"

[build-dependencies]
bindgen = "0.53"
cc = "1"
tonic-build = "0.2"
