[package]
name = "dbreboot"
version = "0.1.0"
authors = ["The ThreefoldTech developers <info@threefold.tech>"]
edition = "2018"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "stream", "sync"] }
failure = "0.1.7"
redis = "0.15"
r2d2 = "0.8"
scheduled-thread-pool = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.3", default-features = false, features = [ "sqlite", "runtime-tokio", "macros" ] }
async-trait = "0.1.30"
log = "0.4"
simple_logger = "1.6"
aes-gcm = "0.5"
rand = "0.7"
clap = "2.33.0"
dirs = "2.0.2"

[build-dependencies]
bindgen = "0.53"
cc = "1"
tonic-build = "0.2"
