[package]
name = "bcdb"
version = "0.1.0"
authors = ["The ThreefoldTech developers <info@threefold.tech>"]
edition = "2018"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "stream", "sync"] }
failure = "0.1.7"
redis = "0.15"
r2d2 = "0.8"
scheduled-thread-pool = "0.2"
serde_json = "1.0"
surf = "1.0.3"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.3", default-features = false, features = [ "sqlite", "runtime-tokio", "macros" ] }
async-trait = "0.1.30"
log = "0.4"
simple_logger = "1.6"
aes-gcm = "0.5"
rand = "0.7"
clap = "2.33.0"
dirs = "2.0.2"
ed25519-dalek = "1.0.0-pre.3"
hex = "0.4"
bip39 = "0.6.0-beta.1"
futures = "0.3.4"
base64 = "0.12.0"
lru_time_cache = "0.10.0"
warp = "0.2"
bytes = "0.5.4"
http = "0.2.1"
hyper = "0.13.6"
openssl-sys = {version="*", features = ["vendored"]}

[build-dependencies]
bindgen = "0.53"
cc = "1"
tonic-build = "0.2"

# [features]
# # Force openssl-sys to staticly link in the openssl library. Necessary when
# # cross compiling to x86_64-unknown-linux-musl.
# vendored = ["openssl-sys/vendored"]
